升级到 JDK20，修改一些界面文字